# Project03

./: .env.sample  .flake8  .gitignore  .pydocstyle  .replit  COORDINATOR_GUIDE.md  COVERAGE_REPORT.md  FINAL_REPORT.md  README.md  TESTING_COVERAGE_REPORT.md  __init__.py  analyze_companies.py  check_company_id_issue.py  check_db_structure.py  coordinator_best_practices.py  coordinator_examples.py  coordinator_patterns.py  dependency_injection_integration.py  drop_tables.py  main.py  migrate_company_id.py  migrate_fix_company_mapping.py  migrate_remove_employer_field.py  migrate_simplify_companies.py  mypy_full_output.txt  pyproject.toml  pyrightconfig.json  replit.md  requirements.txt  run.sh  run_examples.py  token.json
***/: README.md  pytest.ini  test_api_data_filter.py  test_base_formatter.py  test_cache.py  test_cached_api.py  test_config.py  test_db_manager.py  test_db_manager_demo.py  test_file_handlers.py  test_integration.py  test_paginator.py  test_parsers.py  test_postgres_saver.py  test_search_utils.py  test_source_manager.py  test_source_selector.py  test_sql_filtering_once.py  test_storage.py  test_ui_navigation.py  test_unified_api.py  test_vacancy_display_handler.py  test_vacancy_operations.py  test_vacancy_operations_complete.py  test_vacancy_stats.py
attached_assets/: Pasted---1756064367117_1756064367118.txt  Pasted---1756077841697_1756077841701.txt  Pasted--1--1756305849987_1756305849988.txt  Pasted--1-1-2-3-3-7-4-15-5-1756074886994_1756074886998.txt  Pasted--1-1-2-3-3-7-4-15-5-1757200510271_1757200510273.txt  (+363 more)
docs/: README.md  architecture.md  (+2 more)
(+1799 files in other folders)
