[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project03"
version = "0.2.0"
description = "Проект 3. Поиск вакансий"
authors = ["Ri Ga <riga1897@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
tqdm = "^4.67.1"
stubs = "^1.0.0"
pydocstyle = "^6.3.0"
autopep8 = "^2.3.2"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.2"
pytest-cov = "^6.2.1"
pytest-mock = "^3.15.0"
dotenv = "^0.9.9"
pydantic = "^2.11.7"
types-psycopg2 = "^2.9.21.20250809"
python-dotenv = "^1.1.1"
mypy = "^1.17.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
types-tqdm = "^4.67.0.20250809"
types-requests = "^2.32.4.20250809"
flask = "^3.1.2"
gunicorn = "^23.0.0"
pydantic-core = "2.33.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
types-tqdm = "^4.67.0.20250809"

[tool.poetry.group.tests.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \.eggs.py
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/
    | foo.py
)
'''

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = [
  ".venv",
]

[tool.isort]
# максимальная длина строки
line_length = 119